# rusty_jetpack

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  LICENSE  Makefile  README.md  android_arch_mappings.csv  android_artifact_mappings.csv  android_databinding_mappings.csv  android_support_mappings.csv
src/: finder.rs  main.rs  mappings.rs  matcher.rs
