[package]
name = "rusty_jetpack"
version = "1.1.0"
authors = ["Kurt Bonatz <kbonatz@yelp.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
csv = "1"
lazy_static = "1"
memmap = "0.7"
num_cpus = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "0.3"
structopt = "0.2"
tempfile = "3"
