[package]
name = "rusty_jetpack"
version = "1.2.0"
authors = ["Kurt Bonatz <kbonatz@yelp.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
publish = false

[dependencies]
crossbeam-channel = "0.3"
csv = "1"
lazy_static = "1"
memmap = "0.7"
num_cpus = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_regex = "0.4"
structopt = "0.3"
tempfile = "3"
